--- a/src/components/tiptap/style.css
+++ b/src/components/tiptap/style.css
@@ -211,3 +211,60 @@
 		}
 	}
 }
+
+.resume-name {
+	font-size: 24px;
+	font-weight: bold;
+	margin-bottom: 0.25em;
+}
+
+.resume-contact {
+	font-size: 12px;
+	margin-bottom: 1em;
+	color: #444;
+}
+
+.resume-summary {
+	font-size: 14px;
+	margin-bottom: 1.5em;
+}
+
+.resume h3 {
+	font-size: 16px;
+	font-weight: bold;
+	margin-top: 1em;
+	margin-bottom: 0.5em;
+}
+
+.resume .resume-skills {
+	padding: 0;
+}
+
+.resume .resume-skills {
+	margin: 0 !important;
+	line-height: 1.5;
+	font-size: 12px;
+}
+
+.resume-experience {
+	margin-bottom: 1.5em;
+}
+
+.resume h4 {
+	margin-bottom: 10px;
+	margin-top: 0
+}
+
+.job-title {
+	display: flex;
+	justify-content: space-between;
+	font-weight: bold;
+}
+
+.resume-experience ul {
+	padding-left: 1.2em;
+}
+
+.resume-education {
+	margin-top: 0.5em;
+}
